Complete CRUD for user - Add update user _ Add get all User - fixes into documentation - little fixes
